[project]
name = "madonion"
version = "0.1.0"
description = ""
authors = [
    {name = "ju"}
]
readme = "README.txt"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pyqt6 (>=6.8.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
